updated header, html and css files

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,6 +19,24 @@
     <title>Jorge Imóveis | Cartão de Visita Digital</title>
 </head>
 <body>
-    
+    <div class="container">
+
+        <section class="section-1">
+            <header class="header">
+                <div class="headerFlags">
+                    <i class="fa-solid fa-flag-usa"></i>
+                    <i class="fa-brands fa-canadian-maple-leaf"></i>
+                </div>
+                <div class="headerShare" href="javascript:void(0)" onclick="share()">
+                    <i class="fa-solid fa-share-nodes fa-fade"></i>
+                </div>
+            </header>
+        </section>
+
+        <section class="section-2">
+
+        </section>
+    </div>
+
 </body> 
 </html>
