updated section-2, html and css files

--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
         </section>
 
         <section class="section-2">
-
+            <div class="wrapFirstInfoSection-2">
+                <img class="imageSection-2" src="files/logo-jorge_imoveis.png" alt="Logo Jorge Imóveis">
+                <h1 class="textSection-2">Desde 1982</h1>
+            </div>
+            
         </section>
     </div>
 
