updated section 2, added icons, html and css files

--- a/index.html
+++ b/index.html
@@ -38,6 +38,22 @@
                 <img class="imageSection-2" src="files/logo-jorge_imoveis.png" alt="Logo Jorge Imóveis">
                 <h1 class="textSection-2">Desde 1982</h1>
             </div>
+
+            <div class="firstWrapIconsSection-2">
+                <i class="fa-solid fa-globe"></i>
+                <i class="fa-solid fa-envelope"></i>
+                <i class="fa-brands fa-whatsapp fa-fade"></i>
+            </div>
+
+            <div class="secondWrapIconsSection-2">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+            </div>
+
+            <div class="thirdWrapIconsSection-2">
+                <i class="fa-brands fa-youtube"></i>
+                <i class="fa-brands fa-twitter"></i>
+            </div>
             
         </section>
     </div>
