added brazil and maranhao flags, section-1

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <section class="section-1">
             <header class="header">
                 <div class="headerFlags">
-                    <i class="fa-solid fa-flag-usa"></i>
-                    <i class="fa-brands fa-canadian-maple-leaf"></i>
+                    <img class="flags" src="files/Flag_of_Brazil.png" alt="Bandeira do Brasil.">
+                    <img class="flags" src="files/Flag_of_Maranhão.png" alt="Bandeira do Maranhão.">
                 </div>
                 <div class="headerShare" href="javascript:void(0)" onclick="share()">
                     <i class="fa-solid fa-share-nodes fa-fade"></i>
