--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="files/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Gloria+Hallelujah&family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     
     <script src="https://kit.fontawesome.com/86afd65ab5.js" crossorigin="anonymous"></script>
@@ -40,19 +40,19 @@
             </div>
 
             <div class="firstWrapIconsSection-2">
-                <i class="fa-solid fa-globe"></i>
-                <i class="fa-solid fa-envelope"></i>
-                <i class="fa-brands fa-whatsapp fa-fade"></i>
+                <a href="https://jorgeimoveis.com.br/"><i class="fa-solid fa-globe"></i></a>
+                <a href="mailto:jorge@jorgeimoveis.com.br"><i class="fa-solid fa-envelope"></i></a>
+                <a href="https://wa.me/+5598999731018"><i class="fa-brands fa-whatsapp fa-fade"></i></a>
             </div>
 
             <div class="secondWrapIconsSection-2">
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-instagram"></i>
+                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
             </div>
 
             <div class="thirdWrapIconsSection-2">
-                <i class="fa-brands fa-youtube"></i>
-                <i class="fa-brands fa-twitter"></i>
+                <a href=""><i class="fa-brands fa-youtube"></i></a>
+                <a href=""><i class="fa-brands fa-x-twitter"></i></a>
             </div>
             
         </section>
