--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Gloria+Hallelujah&family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media.css">
     
     <script src="https://kit.fontawesome.com/86afd65ab5.js" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
@@ -53,8 +54,7 @@
             <div class="thirdWrapIconsSection-2">
                 <a href=""><i class="fa-brands fa-youtube"></i></a>
                 <a href=""><i class="fa-brands fa-x-twitter"></i></a>
-            </div>
-            
+            </div> 
         </section>
     </div>
 
