--- a/index.html
+++ b/index.html
@@ -41,20 +41,21 @@
             </div>
 
             <div class="firstWrapIconsSection-2">
-                <a href="https://jorgeimoveis.com.br/"><i class="fa-solid fa-globe"></i></a>
-                <a href="mailto:jorge@jorgeimoveis.com.br"><i class="fa-solid fa-envelope"></i></a>
-                <a href="https://wa.me/+5598999731018"><i class="fa-brands fa-whatsapp fa-fade"></i></a>
+                <a href="https://jorgeimoveis.com.br/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-globe"></i></a>
+                <a href="mailto:jorge@jorgeimoveis.com.br" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-envelope"></i></a>
+                <a href="https://wa.me/+5598999731018" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-whatsapp fa-fade"></i></a>
             </div>
 
             <div class="secondWrapIconsSection-2">
-                <a href=""><i class="fa-brands fa-facebook"></i></a>
-                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.facebook.com/jorge.protasio" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/jorge.protasio/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+                <a href=""><i class="fa-brands fa-x-twitter" target="_blank" rel="noopener noreferrer"></i></a>
             </div>
 
-            <div class="thirdWrapIconsSection-2">
-                <a href=""><i class="fa-brands fa-youtube"></i></a>
-                <a href=""><i class="fa-brands fa-x-twitter"></i></a>
-            </div> 
+            <!-- <footer>
+                <p><em>Developed by <a class="developed-by" href="https://renato-albuquerque.github.io/rma-contacts/" target="_blank" rel="noopener noreferrer">Renato Albuquerque 🔗</a></em></p>
+                <p><em>Software Developer</em></p>
+            </footer> -->
         </section>
     </div>
 
