--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                 <a href=""><i class="fa-brands fa-x-twitter" target="_blank" rel="noopener noreferrer"></i></a>
             </div>
 
-            <!-- <footer>
-                <p><em>Developed by <a class="developed-by" href="https://renato-albuquerque.github.io/rma-contacts/" target="_blank" rel="noopener noreferrer">Renato Albuquerque 🔗</a></em></p>
+            <footer class="footer">
+                <p><em>Developed by <a class="footerName" href="https://renato-albuquerque.github.io/rma-contacts/" target="_blank" rel="noopener noreferrer">Renato Albuquerque 🔗</a></em></p>
                 <p><em>Software Developer</em></p>
-            </footer> -->
+            </footer>
         </section>
     </div>
 
