--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="secondWrapIconsSection-2">
                 <a href="https://www.facebook.com/jorge.protasio" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
                 <a href="https://www.instagram.com/jorge.protasio/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
-                <a href=""><i class="fa-brands fa-x-twitter" target="_blank" rel="noopener noreferrer"></i></a>
+                <a href="https://twitter.com/JorgeProtasio?t=xAGb5Wi0__LRESy5ltOSCw&s=08"><i class="fa-brands fa-x-twitter" target="_blank" rel="noopener noreferrer"></i></a>
             </div>
 
             <footer class="footer">
