added new logo, updated url for business card

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
         <section class="section-2">
             <div class="wrapFirstInfoSection-2">
-                <img class="imageSection-2" src="files/logo-jorge_imoveis.png" alt="Logo Jorge Imóveis">
-                <h1 class="textSection-2">Desde 1982</h1>
+                <img class="imageSection-2" src="files/logo-jorgeimoveis.jpeg" alt="Logo Jorge Imóveis">
+                <h1 class="textSection-2">Aluguel, Compra, Venda e Atividades Afins.</h1>
             </div>
 
             <div class="firstWrapIconsSection-2">
@@ -47,7 +47,7 @@
             </div>
 
             <div class="secondWrapIconsSection-2">
-                <a href="https://www.facebook.com/jorge.protasio" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.facebook.com/jorgeimoveis.com.br?locale=pt_BR" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
                 <a href="https://www.instagram.com/jorge.protasio/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://twitter.com/JorgeProtasio?t=xAGb5Wi0__LRESy5ltOSCw&s=08"><i class="fa-brands fa-x-twitter" target="_blank" rel="noopener noreferrer"></i></a>
             </div>
