refactor: updated project

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="files/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Gloria+Hallelujah&family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;0,800;1,300;1,400;1,500;1,700;1,800&family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media.css">
     
@@ -37,7 +37,7 @@
         <section class="section-2">
             <div class="wrapFirstInfoSection-2">
                 <img class="imageSection-2" src="files/logo-jorgeimoveis.jpeg" alt="Logo Jorge Imóveis">
-                <h1 class="textSection-2">Aluguel, Compra, Venda e Atividades Afins.</h1>
+                <h1 class="textSection-2">Já se foi o tempo em que os imóveis deixavam você imóvel.</h1>
             </div>
 
             <div class="firstWrapIconsSection-2">
