updated meta tags, description and keywords

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Renato Albuquerque">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Cartão de Visita Digital da Empresa Jorge Imóveis. Atuante no mercado imobiliário desde 1982, cujo objetivo é atender as expectativas e exigências dos Clientes, no sentido de viabilizar e concretizar a tão sonhada Casa Própria.">
+    <meta name="keywords" content="Aluguel, Compra, Venda, Atividades Afins, Jorge Imóveis, Imobiliária, CRECI">
     
     <link rel="shortcut icon" href="files/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
