--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                 <h1 class="textSection-2">Já se foi o tempo em que os imóveis deixavam você imóvel.</h1>
             </div>
 
+            <div>
+                <h2 class="nameJorgeSection-2">Jorge Protásio</h2>
+                <h2 class="jobJorgeSection-2"><em>Corretor de Imóveis</em></h2>
+            </div>
+
             <div class="firstWrapIconsSection-2">
                 <a href="https://jorgeimoveis.com.br/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-globe"></i></a>
                 <a href="mailto:jorge@jorgeimoveis.com.br" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-envelope"></i></a>
