updated project, removed logo background

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 
         <section class="section-2">
             <div class="wrapFirstInfoSection-2">
-                <img class="imageSection-2" src="files/logo-jorgeimoveis.jpeg" alt="Logo Jorge Imóveis">
+                <img class="imageSection-2" src="files/logo-jorgeimoveis-alt-removebg-preview.png" alt="Logo Jorge Imóveis">
                 <h1 class="textSection-2">Já se foi o tempo em que os imóveis deixavam você imóvel.</h1>
             </div>
 
             <div>
                 <h2 class="nameJorgeSection-2">Jorge Protásio</h2>
-                <h2 class="jobJorgeSection-2"><em>Corretor de Imóveis</em></h2>
+                <h2 class="jobJorgeSection-2">Corretor de Imóveis</h2>
             </div>
 
             <div class="firstWrapIconsSection-2">
